macro(_add_test name)
    add_executable(${name} ${name}.cpp)
    target_compile_options(${name} PRIVATE -Wall -Wextra -Wpointer-arith)
    target_link_libraries(${name} cst_unx)
    add_test(${name} ${name})
endmacro()

_add_test(File_test)
_add_test(FileDescriptor_test)
_add_test(Thread_test)
_add_test(Mutex_test)
_add_test(Socket_test)
_add_test(signal_test)
_add_test(mmap_test)
